css/custom.css
/* your styles go here */
#website-heading {
  position: absolute;
  right: 15%;
  bottom: 20px;
  left: 15%;
  z-index: 10;
  padding-top: 20px;
  padding-bottom: 20px;
  color: #fff;
  text-align: center;
  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
}

.col-centered {
    float: none;
    margin: 0 auto
}

.button-link-size {
    display: inline-block;
    width: 170px;
    text-align: center
}

#project-course-work-label {
    padding: 10px 0px;
    font-size: 16px;
    border-radius: 0px;
    background-color: #042895
}

